--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^5.1.1
   cloud_firestore: ^5.0.2
   mobile_scanner: ^5.1.1
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
