--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^5.0.2
   mobile_scanner: ^5.1.1
   qr_flutter: ^4.1.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
