--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   qr_flutter: ^4.1.0
   intl: ^0.19.0
   image_picker: ^1.1.2
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
