--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.19.0
   image_picker: ^1.1.2
   flutter_riverpod: ^2.5.1
+  random_name_generator: ^1.3.0
 
 dev_dependencies:
   flutter_test:
