--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,12 @@ dependencies:
   cloud_firestore: ^5.0.2
   mobile_scanner: ^5.1.1
   qr_flutter: ^4.1.0
-  intl: ^0.19.0
+  intl: any
   image_picker: ^1.1.2
   flutter_riverpod: ^2.5.1
   random_name_generator: ^1.3.0
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +64,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  # required for localization
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
