--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,12 +1,21 @@
 # This workflow uses actions that are not certified by GitHub.
+steps:
 # They are provided by a third-party and are governed by
+  - name: Clone repository
 # separate terms of service, privacy policy, and support
+    uses: actions/checkout@v4
 # documentation.
+  - name: Set up Flutter
 
+    uses: subosito/flutter-action@v2
 name: Dart
+    with:
 
+      channel: stable
 on:
+      flutter-version-file: pubspec.yaml # path to pubspec.yaml
   push:
+  - run: flutter --version
     branches: [ "develop" ]
   pull_request:
     branches: [ "develop" ]
@@ -15,28 +24,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v4
-
-      # Note: This workflow uses the latest stable version of the Dart SDK.
-      # You can specify other versions if desired, see documentation here:
-      # https://github.com/dart-lang/setup-dart/blob/main/README.md
-      # - uses: dart-lang/setup-dart@v1
-      - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      # Uncomment this step to verify the use of 'dart format' on each commit.
-      # - name: Verify formatting
-      #   run: dart format --output=none --set-exit-if-changed .
-
-      # Consider passing '--fatal-infos' for slightly stricter analysis.
-      - name: Analyze project source
-        run: dart analyze
-
-      # Your project will need to have tests in test/ and a dependency on
-      # package:test for this step to succeed. Note that Flutter projects will
-      # want to change this to 'flutter test'.
-      - name: Run tests
-        run: dart test
+steps:
+  - name: Clone repository
+    uses: actions/checkout@v4
+  - name: Set up Flutter
+    uses: subosito/flutter-action@v2
+    with:
+      channel: stable
+      flutter-version-file: pubspec.yaml # path to pubspec.yaml
+  - run: flutter --version
+  - run: flutter pub get
+  - run: flutter test
+  - run: flutter build apk
+  - run: flutter build appbundle
+  - run: flutter build ios --release --no-codesign
