--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,21 +1,12 @@
 # This workflow uses actions that are not certified by GitHub.
-steps:
 # They are provided by a third-party and are governed by
-  - name: Clone repository
 # separate terms of service, privacy policy, and support
-    uses: actions/checkout@v4
 # documentation.
-  - name: Set up Flutter
 
-    uses: subosito/flutter-action@v2
 name: Dart
-    with:
 
-      channel: stable
 on:
-      flutter-version-file: pubspec.yaml # path to pubspec.yaml
   push:
-  - run: flutter --version
     branches: [ "develop" ]
   pull_request:
     branches: [ "develop" ]
@@ -24,17 +15,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-steps:
-  - name: Clone repository
-    uses: actions/checkout@v4
-  - name: Set up Flutter
-    uses: subosito/flutter-action@v2
-    with:
-      channel: stable
-      flutter-version-file: pubspec.yaml # path to pubspec.yaml
-  - run: flutter --version
-  - run: flutter pub get
-  - run: flutter test
-  - run: flutter build apk
-  - run: flutter build appbundle
-  - run: flutter build ios --release --no-codesign
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v4
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version-file: pubspec.yaml 
+      - run: flutter --version
+      - run: flutter pub get
+      - run: flutter test
+      - run: flutter build apk
+      - run: flutter build appbundle
+      - run: flutter build ios --release --no-codesign
