--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -19,9 +19,10 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v4
       - name: Set up Flutter
-        uses: subosito/flutter-action@v2
+        uses: flutter-actions/setup-flutter@v3
         with:
-          flutter-version-file: pubspec.yaml 
+          channel: stable
+          version: 3.24.0 
       - run: flutter --version
       - run: flutter pub get
       - run: flutter test
