enable test on github action

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -25,7 +25,7 @@ jobs:
           version: 3.24.0 
       - run: flutter --version
       - run: flutter pub get
-#      - run: flutter test
+      - run: flutter test
       - run: flutter build apk
       - run: flutter build appbundle
       - run: flutter build ios --release --no-codesign
