add archive apk

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -28,6 +28,12 @@ jobs:
       - run: flutter test
       - run: flutter build apk
       - run: flutter build appbundle
+      - name: Archive APK
+        uses: actions/upload-artifact@v2
+        with:
+          name: release-apk
+          # Try running the build locally with the build command to be sure of this path
+          path: build/app/outputs/flutter-apk/app-debug.apk
 
   build_mac:
     runs-on: macos-latest
