--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -26,14 +26,20 @@ jobs:
       - run: flutter --version
       - run: flutter pub get
       - run: flutter test
-      - run: flutter build apk
-      - run: flutter build appbundle
+      - run: flutter build apk --debug
+      - run: flutter build appbundle --debug
       - name: Archive APK
         uses: actions/upload-artifact@v2
         with:
           name: release-apk
           # Try running the build locally with the build command to be sure of this path
-          path: build/app/outputs/flutter-apk/app-release.apk
+          path: build/app/outputs/flutter-apk/app-debug.apk
+      - name: Archive Bundle
+        uses: actions/upload-artifact@v2
+        with:
+          name: release-bundle
+          # Try running the build locally with the build command to be sure of this path
+          path: build/app/outputs/bundle/debug/app-debug.aab
 
   build_mac:
     runs-on: macos-latest
@@ -52,7 +58,7 @@ jobs:
       - uses: cedvdb/action-flutter-build-ios@v1
         with:
           # always use --export-options-plist=ios/GithubActionsExportOptions.plist
-          build-cmd: flutter build ipa
+          build-cmd: flutter build ipa --debug
           certificate-base64: ${{ secrets.IOS_BUILD_CERTIFICATE_BASE64 }}
           certificate-password: ${{ secrets.IOS_BUILD_CERTIFICATE_PASSWORD }}
           provisioning-profile-base64: ${{ secrets.BUILD_PROVISION_PROFILE_BASE64 }}
