--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -45,7 +45,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Environment
-        uses: ./.github/workflows/setup_env.yml
+        uses: ./.github/workflows/setup
 
       - run: flutter test
 
