--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Environment
-        uses: ./.github/workflows/setup_env.yml
+        uses: ./.github/workflows/setup
 
       - run: flutter test
       - run: flutter build apk --debug
