--- a/.github/workflows/setup/action.yml
+++ b/.github/workflows/setup/action.yml
@@ -3,7 +3,7 @@ author: 'Stefano Bianda'
 description: 'Setup the environment for the project in the same way'
 
 runs:
-  using: 'composite'
+  using: "composite"
     steps:
       - name: Set up Flutter
         uses: flutter-actions/setup-flutter@v3
