include develop as running branch

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,7 +2,7 @@ name: Android
 
 on:
   push:
-    branches: [ "github_action" ]
+    branches: [ "github_action", "develop" ]
   pull_request:
     branches: [ "develop" ]
 
