--- a/.github/workflows/apple.yml
+++ b/.github/workflows/apple.yml
@@ -2,7 +2,7 @@ name: Apple
 
 on:
   push:
-    branches: [ "github_action" ]
+    branches: [ "github_action", "develop" ]
   pull_request:
     branches: [ "develop" ]
 
