--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   random_name_generator: ^1.3.0
   flutter_localizations:
     sdk: flutter
+  flutter_email_sender: ^6.0.3
 
 dev_dependencies:
   flutter_test:
